# piri

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  evaluate.py  ingest.py  main.py  pyproject.toml  requirements.txt  train.py
docs/: SCREENSHOTS_STATUS.md
knowledge_base/: agent_architectures.md  ai_frameworks.md  llm_training_techniques.md  prompt_engineering.md  rag_literature.md
piri/: __init__.py  chunker.py  embedder.py  engine.py  evaluator.py  reranker.py  retriever.py  vector_store.py  web_search.py
static/: index.html
